# SmartPaperFinder

./: .gitignore  Citation_analysis.ipynb  LICENSE  README.md  pyproject.toml
.github/workflows/: project-startup-test.yml
app/: functions.py  main.py
app/citation_network_dataset/: citation_dataset.py
tests/: startup_test.py
