[project]
name = "app"
version = "0.1.0"
description = "A system that analyzes arXiv papers based on user prompts."
authors = [
    {name = "Your_Name"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv",
    "flet",
    "sentence-transformers",
    "torch",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
